changed other abbreviations

--- a/transcriptions/for_testing/b_15_17/119v.md
+++ b/transcriptions/for_testing/b_15_17/119v.md
@@ -6,16 +6,16 @@ author: Jenna Schoen
 - [x] Transcribed
 - [ ] Double checked
 
-ffor þi quod g̃ce er I go. I wol gyue yow tresor  
+ffor þi quod g̈ce er I go. I wol gyue yow tresor  
 And wepne to fighte wiþ. whan Antecrist yow assaileþ  
-And gaf ech man a g̃ce. to gide wiþ hym seluen  
+And gaf ech man a g̈ce. to gide wiþ hym seluen  
 That ydelnesse encombre hym noȝt. enuye ne pride  
-Diuisiones graciaɏ sunt ⁊c̉  
+Diuisiones graciaɏ sunt ⁊c͛  
 ¶Some he yaf wit. with wordes to shewe  
 wit to wynne hir liflode wiþ. as þe world askeþ  
 As p̉chours and preestes. and prentices of lawe  
 They lelly to lyue. by labour of tonge  
-And by wit to wissen oþere. as g̃ce hem wolde teche  
+And by wit to wissen oþere. as g̈ce hem wolde teche  
 ¶And some he kennede craft. and konnynge of sighte  
 wiþ sellynge and buggynge. hir bilyue to wynne  
 ¶And some he lered to laboure. a lele lif and a trewe  
@@ -26,11 +26,11 @@ And some to compace craftily. and colours to make
 And some to se and to seye. what sholde bifalle  
 Boþe of wele and of wo. telle it er it felle  
 As astronomyens þoruȝ Astronomye. and Philosofres wise  
-¶And some to ryde and to recou̔e. þat wroughfully was wonne  
+¶And some to ryde and to recoủe. þat wroughfully was wonne  
 He wissed hem to wynne it ayein. þoruȝ wightnesse of handes  
 And fecchen it fro false men. wiþ ffoluyles lawes  
 ¶And some he lered to lyue. in longyuge to be hennes  
-In pou̔te and in penaunce. to preie for alle cristene  
+In poủte and in penaunce. to preie for alle cristene  
 And alle he lered to be lele. and ech a craft loue ooþer  
 And forbad hem alle debat. þͭ noon were among hem  
 Thouȝ some be clenner þan some. ye se wel quod Grace  
