--- a/transcriptions/for_testing/b_15_17/120r.md
+++ b/transcriptions/for_testing/b_15_17/120r.md
@@ -29,7 +29,7 @@ Thise foure þe feiþ to teche. folweþ Piers teme
 And harewede in an hand while. al holy Scripture  
 wiþ two harewes þͭ þei hadde. an oold and a newe  
 Id est vetus testamentum ⁊ nouū  
-¶And Grace gaf greynes. þe Cardynal v̔tues  
+¶And Grace gaf greynes. þe Cardynal v̉tues  
 And sew hem in mannes soule. and siþen he tolde hir names  
 Spiritus prudencie. þe firste seed highte  
 And who so ete þat. ymagynen he sholde  
