--- a/transcriptions/for_testing/b_15_17/120v.md
+++ b/transcriptions/for_testing/b_15_17/120v.md
@@ -8,7 +8,7 @@ author: Jenna Schoen
 
 ¶The seconde seed. highte spiritus temperancie  
 He þat ete of þat seed. hadde swich a kynde  
-Sholde neu̔e mete ne muchel drynke. make hym to swelle  
+Sholde neủe mete ne muchel drynke. make hym to swelle  
 Ne wynnynge ne wele. of worldliche richesse  
 waste word of ydelnesse. ne wikked speche moeue  
 Sholde no curious cloop. comen on his rugge  
@@ -20,7 +20,7 @@ Mighte no lesynges ne lyer̉. ne los of worldly catel
 Maken hym for any mournynge. þat he nas murie in soule  
 And bold and abidynge. bismares to suffre  
 And plereþ al wiþ pacience. and Parce michi dn̄e  
-And cou̔ed hym Vnder conseille. of Caton þe wise   
+And coủed hym Vnder conseille. of Caton þe wise   
 Esto forti animo cum sis dampnatus iniqꝫ  
 ¶The ferþe seed þͭ Piers sew. was spiritus Iusticie.  
 And he þͭ ete of þat seed. sholde be euere trewe  
@@ -31,7 +31,7 @@ May nouȝt ben espied. for spiritus Iusticie
 Hem þat ben gilty. and for to correcte  
 The kyng if he falle. in gilt or in trespas  
 ffor counteþ he no kynges wraþe. whan he in Court sitteþ  
-To demen as a domes man. adrad was he neu̔e  
-Neiþ̔ of duc ne of deeþ. þ̔ he ne dide lawe  
+To demen as a domes man. adrad was he neủe  
+Neiþ̉ of duc ne of deeþ. þ̉ he ne dide lawe  
 ffor p̉sent or for preiere. or any Prynces lettres  
 He dide equyte to alle. euene forþ his power  
