--- a/transcriptions/for_testing/b_15_17/121r.md
+++ b/transcriptions/for_testing/b_15_17/121r.md
@@ -8,12 +8,12 @@ author: Jenna Schoen
 
 ¶Thise foure sedes Piers sew. and siþþe he dide hem harewe  
 wiþ olde lawe and newe lawe. þat loue myȝte wexe  
-Among þo foure v̔tues. and Vices destruye  
+Among þo foure v̉tues. and Vices destruye  
 ffor communliche in contrees. cammokes and wedes  
 ffoulen þe fruyt in þe feld. þer þei growen togideres  
 And so doon Vices. vertues worþi  
 ¶Quod Piers hareweþ alle þat konneþ kynde wit. by conseil of þise docto  
-And tilieþ after hir techynge. þe Cardynale v̔tues  
+And tilieþ after hir techynge. þe Cardynale v̉tues  
 ¶Ayeins þi greynes quod Grace. bigynneþ for to ripe  
 Ordeigne þee an hous Piers. to herberwe Inne þi cornes  
 ¶By god Grace quod Piers. ye moten gyue tymber  
