--- a/transcriptions/for_testing/b_15_17/121v.md
+++ b/transcriptions/for_testing/b_15_17/121v.md
@@ -11,15 +11,15 @@ And sente forþ surquidous. his sergeaunt of armes
 And his spye spille loue. oon spek yuel bihynde  
 ¶Thise two coome to Conscience. and to cristen peple  
 And tolde hem tidynges. þͭ tyne þei sholde þe sedes  
-That Piers þere hadde ysowen. þe Cardynale v̔tues  
+That Piers þere hadde ysowen. þe Cardynale v̉tues  
 And Piers bern worþ ybroke. and þei þat ben in Vnitee  
 Shulle come out. and Conscience. and your̉ two caples  
 Confession and Contricion. and your̉ carte þe bileeue  
-Shal be coloured so queyntely. and cou̔ed Vnder sophistrie  
+Shal be coloured so queyntely. and coủed Vnder sophistrie  
 That Conscience shal noȝt. knowe by contricion  
 Ne by Confession. who is cristene or heþene  
 Ne no manere marchaunt. þat wiþ moneye deleþ  
-wheiþ̔ he wynne wiþ right. wiþ wrong or wiþ Vsure  
+wheiþ̉ he wynne wiþ right. wiþ wrong or wiþ Vsure  
 ¶wiþ swiche colours and queyntise. comeþ pride yarmed  
 wiþ þe lord þat lyueþ after. þe lust of his body  
 To wasten on welfare. and in wikked lyuyng  
