--- a/transcriptions/for_testing/b_15_17/122r.md
+++ b/transcriptions/for_testing/b_15_17/122r.md
@@ -17,7 +17,7 @@ And for siluer were forswore. sooþly þei wiste it
 Saue sherewes one. swiche as I spak of  
 That he no halp a quantite. holynesse to wexe  
 Some þoruȝ bedes biddynge. and some þoruȝ pilgrymages  
-And oþ̔e pryue penaunces. and sōme þoruȝ penyes delynge  
+And oþ̉e pryue penaunces. and sōme þoruȝ penyes delynge  
 ¶And þanne wellede water. for wikkede werkes  
 Egreliche errynge. out of mennes eighen  
 Clennesse out of commune. and clerkes clene lyuynge  
