--- a/transcriptions/for_testing/b_15_17/123r.md
+++ b/transcriptions/for_testing/b_15_17/123r.md
@@ -7,9 +7,9 @@ author: Jenna Schoen
 - [ ] Double checked
 
 ¶But in hir holynesse. helden hem stille  
-At Auynoū among þe Iewes. Cum Sc̄o Stūs eris ⁊c̉
+At Auynoū among þe Iewes. Cum Sc̄o Stūs eris ⁊c͛
 Or in Rome as hir rule wole. þe relikes to kepe  
-And þow Conscience in kynges court. and sholdest neu̔e come þennes  
+And þow Conscience in kynges court. and sholdest neủe come þennes  
 And Grace þat þow graddest so of. gyour of alle clerkes  
 And Piers wiþ his newe plow. and ek wiþ his olde  
 Emꝑour of al þe world. þat alle men were cristene  
@@ -31,7 +31,7 @@ And cleymeþ bifore þe kyng. to be kepere ouer cristene
 And counteþ noȝt þouȝ cristene ben. killed and robbed  
 And fynt folk to fiȝte. and cristen blood to spille  
 Ayein þe olde lawe and newe lawe. as Luc þer of witnesseþ  
-Non occides. michi vindictam ⁊c̉
+Non occides. michi vindictam ⁊c͛
 ¶It semeþ bi so. hym self hadde his wille  
 That he reccheþ. riȝt noȝt of al þe remenaunt  
 And crist of his curteisie. þe Cardinals saue  
