--- a/transcriptions/for_testing/b_15_17/123v.md
+++ b/transcriptions/for_testing/b_15_17/123v.md
@@ -7,11 +7,11 @@ author: Jenna Schoen
 - [ ] Double checked
 
 For þe comune quod þis Curatour. counten ful litel  
-The counseil of Conscience. or Cardinale v̔tues  
+The counseil of Conscience. or Cardinale v̉tues  
 But if þei seiȝe as by sighte. som what to wynnyng  
-Of gile ne of gabbyng. gyue þei neu̔e tale  
+Of gile ne of gabbyng. gyue þei neủe tale  
 ffor spiritus prudencie. among þe peple is gyle  
-And alle þo faire v̔tues. as Vices þei semeþ  
+And alle þo faire v̉tues. as Vices þei semeþ  
 Ech man subtileþ a sleiȝte. synne for to hide  
 And coloureþ it for a konnynge. and a clene lyuynge  
 ¶Thanne louȝ þer a lord. and by þis light seide  
@@ -30,7 +30,7 @@ And siþ I am your̉ aller heed. I am your̉ aller heele
 And holy chirches chief help. and Chieftayn of þe comune  
 And what I take of yow two. I take it at þe techynge  
 Of Spiritus Iusticie. for I Iugge yow alle  
-So I may boldely be housled. for I borwe neu̔e  
+So I may boldely be housled. for I borwe neủe  
 Ne craue of my comune. but as my kynde askeþ  
 ¶In condicion quod Conscience. þͭ þow konne defende  
 And rule þi reaume in reson. right wel and in truþe  
