--- a/transcriptions/for_testing/cc_198/160r.md
+++ b/transcriptions/for_testing/cc_198/160r.md
@@ -31,7 +31,7 @@ That neuer schulde þer be defaute in here
 here may men sen an humble wyse acord  
 Thus haþ sche take hire seruan̄t and hire lord  
 Seruaunt in loue and lord in mariage  
-Then was he boþe in lordschipe and ẜuage  
+Then was he boþe in lordschipe and s̉uage  
 Seruage nay but in lordschipe aboue  
 Seþyns þat he haþ boþe his lady and his loue  
 his lady certes and his wyf also  
