--- a/transcriptions/for_testing/cc_198/160v.md
+++ b/transcriptions/for_testing/cc_198/160v.md
@@ -27,12 +27,12 @@ hire freendes which þat knewe hire heuy þouȝt
 Conforted hire in al þat euer þey mighte or may
 They prechen hire þay tellen hire night and day  
 þat causeles sche sleeþ hire self allas  
-And eu̔y confort possible in þis cas  
+And eủy confort possible in þis cas  
 þey don to hire wiþ all here busynes  
 And all to make hire lete hir heuynes  
-By ꝓcesse as ȝe knowe wel eu̔ychon  
+By ꝓcesse as ȝe knowe wel eủychon  
 Men may so longe grauen in þe ston  
-Til som figure þ̔inne enprentyd be  
+Til som figure þ̉inne enprentyd be  
 Solonge han þey conforted hire þat sche  
 Receyued haþ by hope and by reson̄  
 The empryntyng of hir constillacion̄  
