--- a/transcriptions/for_testing/cc_198/161r.md
+++ b/transcriptions/for_testing/cc_198/161r.md
@@ -10,7 +10,7 @@ date: September 17 2018
 And preyed hire on knees for goddes sake  
 To come and rome hire in companye  
 Away to dryue hire derke fantasye  
-And fynally sche gũnted þat requeste  
+And fynally sche günted þat requeste  
 ffor wel sche sawe it was for þe beste  
 Now stood hire castel faste by þe see  
 And often wiþ hire freendes walked sche  
@@ -31,7 +31,7 @@ Thenne wolde sche sitte a doun vpon þe grene
 And pitously in to þe see byholde  
 And sayn right þus wiþ sorowful hertes colde  
 Eterne god þat þurgh þy puruyaunce  
-ledest þe world by certein gou̔naunce  
+ledest þe world by certein goủnaunce  
 In ydelnesse as men sayn ȝe no þing make  
 But lord þese grisely feendly rokkes blake  
 That semen raþer a foul confusion̄  
