--- a/transcriptions/for_testing/cc_198/162r.md
+++ b/transcriptions/for_testing/cc_198/162r.md
@@ -30,7 +30,7 @@ On þe beste farynge man on lyue
 And wel biloued and holden in gret prys  
 And schortliche if þe soþe telle I schal  
 vnwytyng of þis Dorigen at al  
-This lusty squyer ẜuaunt to venus  
+This lusty squyer s̉uaunt to venus  
 which þat y cleped was aurelius  
 had loued hire best of eny creature  
 Tuo ȝeer and more as was his aduenture  
