--- a/transcriptions/for_testing/cc_198/162v.md
+++ b/transcriptions/for_testing/cc_198/162v.md
@@ -13,7 +13,7 @@ ffor narsisus þat durste nouȝt telle hir wo
 In oþer manere þenne ȝe here me seye  
 Ne durst he nouȝt to hire his wo bewreye  
 Saue ꝑaduentẽ som tyme at daunces  
-There ȝong folk kepen here obẜuaunces  
+There ȝong folk kepen here obs̉uaunces  
 hit may wel be he loked on hire face  
 In such a wise as man þat asked grace  
 But no þing wiste sche of his entent  
