--- a/transcriptions/for_testing/cc_198/163r.md
+++ b/transcriptions/for_testing/cc_198/163r.md
@@ -11,7 +11,7 @@ I wolen ben his to whom þat I am knyt
 But after þat in pleyn þus seyde sche  
 Tak þis for fynal answer as for me  
 Aurely qd sche by hihe god aboue  
-ȝit wol I gũnte ȝou to be ȝoure loue  
+ȝit wol I günte ȝou to be ȝoure loue  
 Seþyns I ȝou se so pitously compleyne  
 loke what day þat engelond is Bryteyne  
 ȝe remewe all þe rokkes ston by stoon  
@@ -25,7 +25,7 @@ No by þat lord quod sche þat made me
 ffor wel I wot þat þat schal neuer betyde  
 let such folye out of ȝour herte glyde  
 what deynte schulde man haue by his lijf  
-ffor to loue anoþ̔ mannes wyf  
+ffor to loue anoþ̉ mannes wyf  
 That haþ hir body whan so þat him likeþ  
 aurelius fulofte sore sikeþ  
 wo was aurely whan þat he þis herde  
