--- a/transcriptions/for_testing/cc_198/164v.md
+++ b/transcriptions/for_testing/cc_198/164v.md
@@ -28,10 +28,10 @@ his brest was hole wiþouten for to sene
 But in his herte was ay þe arwe kene  
 And wel ȝe knowen þat a sore sauure  
 In surgerie ful ꝑilous is þe cure  
-But man might touche þe arwe or come þ̔by  
-his broþ̔ wepeþ and wayleþ priuyly  
-Til atte laste him fell in remembũnce  
-That whiles he was at Orlyaunce in ffũnce  
+But man might touche þe arwe or come þ̉by  
+his broþ̉ wepeþ and wayleþ priuyly  
+Til atte laste him fell in remembünce  
+That whiles he was at Orlyaunce in ffünce  
 As ȝonge clerkes þat ben likerous  
 To reden artes þat ben curious  
 Seken in euery halk and euery herne  
@@ -40,6 +40,6 @@ he him remembreþ vpon a day
 At Orlyaunce in studye a book he say  
 Of magiqꝫ naturell which his felawe  
 That was þat tyme a bachiler of lawe  
-Al were he þere to lerne anoþ̔ craft  
+Al were he þere to lerne anoþ̉ craft  
 And priuely vpon his deske y laft  
 This book spak mochli of þis oꝑacion̄s  
