--- a/transcriptions/for_testing/cp_201/82r.md
+++ b/transcriptions/for_testing/cp_201/82r.md
@@ -4,25 +4,25 @@ date: September 2018
 author: Jenna Schoen
 ---
 
-Ergo þ̔e is no name / to þe name of Ihs̄.   
+Ergo þ̉e is no name / to þe name of Ihs̄.   
 Ne nō name so needful / to nēpne / by nyghtis ne be dayes.  
 ffor aỻ þe derke deuelis / are a dred to heeren y nēpned.  
 ⁊ synful souꝉ ben solaced / ⁊ saVid be þͭ name.  
-¶why calle ȝee hȳ þanne c̉st / what cause ȝee me teỻ.  
-¶ffor c̉st is moor̉ of myght / ⁊ of mor̉ worthier̉ name.  
+¶why calle ȝee hȳ þanne c͛st / what cause ȝee me teỻ.  
+¶ffor c͛st is moor̉ of myght / ⁊ of mor̉ worthier̉ name.  
 þan Ihū er Ihs̄ / þͭ al our̉ Ioyȝe of spryngeþ.  
 ¶knowest þͧ weel qd conscience / ⁊ þͧ kone good resoū.  
 þͭ a knyght . ⁊ a kyng. ⁊ cōquerour / may ben al on ꝑsone.  
 ¶To ben clepd a knyght is fayr / for mē shuỻ knele til hȳ.  
 ¶To ben callid a kyng is fair̉re / for a kyng mai knyghtis make.  
-¶ffor to ben cōquerour calid / þͭ comeþ of godɖ special g̃ce.    
+¶ffor to ben cōquerour calid / þͭ comeþ of godɖ special g̈ce.    
 ⁊ of hardynesse of herte / ⁊ also of hendenesse.  
 To maken lordis ⁊ ladijs / in londys þͭ þey wynne.  
 ⁊ free mē / fowle þraỻ / þͭ folwe not hise lawes.  
 ¶ffor þe Iewis þͭ weren Ientyl mē / Isū þey dyspiseɖ.  
 Boþe his loor̉ / ⁊ his lawe / ⁊ now be þey lowe cherlis.  
 As wyȝd as þis world ys / whonen þer̉ noone.  
-But Vndir t̉but / ⁊ tallyage / as tykes ⁊ cherlys.  
+But Vndir t͛but / ⁊ tallyage / as tykes ⁊ cherlys.  
 ⁊ þo þat by-come cristene / by conseyl of bapteme.  
 Arn ffrankeleynes ⁊ free mē / þorghȝ fuỻyng þͭ þei take.  
 ⁊ Ientil mē wͭ Ihū / for Ihū was y fullid.  
@@ -30,8 +30,8 @@ Vpon Caluerye / on þe cros / ⁊ korouned kyng of Iewis.
 It be comeþ wel to a kyng / to kepen his lond ⁊ to defende it.  
 ⁊ cōquerour of his cōquest /. hyse lordis to ȝeve hē large.  
 ¶⁊ so dyde Ihū to þe Iewis / he Iusted ⁊ tawhte hem.  
-þe lawe of lyf / þat lasten shal eu̔e mor̉.  
-⁊ fendid fram hē fowle eVelis / boþe fyu̔es. ⁊ eek fluxis.  
+þe lawe of lyf / þat lasten shal eủe mor̉.  
+⁊ fendid fram hē fowle eVelis / boþe fyủes. ⁊ eek fluxis.  
 ⁊ feendis þͭ in hem was / ⁊ eek fals by leVe.  
 þo was he Ihū of Iewis callyd / ⁊ þe Ientil ꝓpħe.  
 ⁊ kyng of kyngdōm ⁊ crowne he bar of þornes.  
