--- a/transcriptions/for_testing/cp_201/82v.md
+++ b/transcriptions/for_testing/cp_201/82v.md
@@ -10,14 +10,14 @@ who was hardier̉ þan he / þͭ his herte blood he shedde.
 To maken aỻ folk free / þͭ folwen hise lawes.  
 ¶⁊ sytthen he ȝeVeþ largely / aỻ hise leele lygis.  
 places in ꝑadis / at here deꝑtynge hennes.  
-he may wel be cald a cōquerour / ⁊ þͭ is c̉st to meene.  
+he may wel be cald a cōquerour / ⁊ þͭ is c͛st to meene.  
 ¶But þe cause þͭ he comeþ þus / wͭ his cros of his passioū.  
-Is to wissen Vs þ̔e wͭ / whan we been y tēptyd.  
+Is to wissen Vs þ̉e wͭ / whan we been y tēptyd.  
 þer wͭ / to fyghte ⁊ defende Vs / fro fallȳg in to synne.  
 ⁊ to seen be his sorwe / þͭ who so loVeþ Ioyȝe.  
-To penaūce ⁊ to pou̔te / he muste pyttȳ hym selue.  
+To penaūce ⁊ to poủte / he muste pyttȳ hym selue.  
 ⁊ mychel woo / in þis world / wylnen ⁊ suffren.  
-¶But to carpe mor̉ of c̉st / ⁊ how he cā to þͭ name.  
+¶But to carpe mor̉ of c͛st / ⁊ how he cā to þͭ name.  
 ffaythly / for to speke / his fyrste name was Ihs̄.  
 þoo he was boor̉ in bedleem / as. bookys boldly tellȳ.  
 ⁊ cā to take mākynde / boþe kyngys ⁊ angꝉis.  
@@ -25,19 +25,19 @@ Reuerensed hȳ ryght fayr̉ / wͭ rycchesse of erthe.
 Angꝉis out of heuene / come knelynge ⁊ sūgen.  
 Gloria in excelcis deo.  
 ¶kyngis kemen after / ⁊ kneled to hȳ ⁊ offreden.  
-Ensens / ⁊ myrre. ⁊ myche gold / wͭ myche m̔cy asked.  
-Er of ony kenne Cateꝉ / þey knowlechid hȳ. her̉ sou̔eyn.  
+Ensens / ⁊ myrre. ⁊ myche gold / wͭ myche m̉cy asked.  
+Er of ony kenne Cateꝉ / þey knowlechid hȳ. her̉ soủeyn.  
 Boþe of sunne . of sond . ⁊ see / ⁊ sythis hoom þey wentyn.  
 In to her̉ kyngene kyþ / be kennȳge of an angel.  
 ⁊ þerwͭ was þe woord / ful fyld / þe wiche first þͧ speke  
-Oīa celestia / t̔rest̉a flectantͬ ī h̊ noīe Ih̉u.  
+Oīa celestia / t̉rest͛a flectantͬ ī h̊ noīe Ih̉u.  
 ¶ffor aỻ þe angelis of hevene / at his berthe þey kneliden.  
 ⁊ al þe witt in þis world / was þoo in þre þynges.  
 Resoū. ⁊ Ryghtwisnesse / ⁊ rewþe / þey offreden.  
 ¶Where for̉ / ⁊ why ؛ wyse men þͭ tyme.  
-Boþe Maist̉s ⁊ mē y leerneɖ / Magy hem nameden.  
-¶Þe ton kyng cam wͭ resoū / y kou̔ed Vndir ensense.  
-þe toþ̔ kyng sytthe / sooþly he offrede.  
-Ryghtwyȝsnesse Vndir reed gold / þͭ lasten shal eu̔e.  
+Boþe Maist͛s ⁊ mē y leerneɖ / Magy hem nameden.  
+¶Þe ton kyng cam wͭ resoū / y koủed Vndir ensense.  
+þe toþ̉ kyng sytthe / sooþly he offrede.  
+Ryghtwyȝsnesse Vndir reed gold / þͭ lasten shal eủe.  
 ffor it shal turne tresoun / to ryght / ⁊ to trewthe.  
 þe þrydde kyng þo cam / ⁊ knelid to Ihū lowe.  
