--- a/transcriptions/for_testing/cp_201/83r.md
+++ b/transcriptions/for_testing/cp_201/83r.md
@@ -5,17 +5,17 @@ author: Jenna Schoen
 ---
 
 ⁊ p̉esented hȳ wͭ pite / a peerynge be Mirre.  
-ffor M̔re is m̔cy to meene / ⁊ myȝlde speche of tūge.  
+ffor m̉re is m̉cy to meene / ⁊ myȝlde speche of tūge.  
 Erthely onest þyng / was offred þus. a toones  
 þorghȝ þre kenne kyngys / knelyng to Ihū    
 ffor þese p̉cious p̉sentis / our̉ lord p͛nce Ihūs.  
-was neyþ̔ kyng ne cōquerour / tyl he gan to wexe.  
-In þe man̔e of a man / ⁊ þͭ þorghȝ myche sleyghte.  
+was neyþ̉ kyng ne cōquerour / tyl he gan to wexe.  
+In þe man̉e of a man / ⁊ þͭ þorghȝ myche sleyghte.  
 As it be comeþ a cōquerour / to knowe manye sleyghtes.  
 ⁊ manye wyȝlis / ⁊ witt / þͭ wiỻ ben a leeder̉.  
 ⁊ so dide Ihū in hise dayes / who hadɖ tyme to teỻ.  
 Sū tyȝme he suffrede / ⁊ sū tyme he hedde hȳ selVe.  
-⁊ sū tyme he fawht faste / ⁊ he fleyȝ oyþ̔ whyle.  
+⁊ sū tyme he fawht faste / ⁊ he fleyȝ oyþ̉ whyle.  
 ⁊ sū tyȝme he gaf good / ⁊ graūted heele boþe.  
 ⁊ also lyȝf ⁊ leme / as he luste he wroghte.  
 As keende is of a cōsquerour / so cūsede Ihū    
@@ -25,17 +25,17 @@ water in to wyȝn / as holy wryt telleþ.
 ⁊ þere by gan god / of his grace Dowel.  
 ffor wyȝn y lykne to þe lawe / or lyf of holinesse.  
 ⁊ lawe lakked þo / for mē loVede not her̉ enemyȝs.  
-But c̉st cōseyleþ þus Vs / ⁊ comāndeþ vs boþe.  
+But c͛st cōseyleþ þus Vs / ⁊ comāndeþ vs boþe.  
 To lerede ⁊ to leweɖ / for to loVe our̉ enemyȝs.  
 So at þe feest first / as y be fore tolde.  
-By gan god of his g̃ce / ⁊ of his goodnesse to Dowel  
-⁊ þo was he clepid ⁊ cald / not oonly c̉st but Ihū.  
+By gan god of his g̈ce / ⁊ of his goodnesse to Dowel  
+⁊ þo was he clepid ⁊ cald / not oonly c͛st but Ihū.  
 A fantekyn ful of wit / filius Marie.  
 ⁊ byfor̉ hys moodir̉ Marie / made he þͭ wondir.  
 þͭ she first ⁊ formest / scholde ferme þe beleVe.  
 þͭ he þorghȝ grace was begete / ⁊ of no goome eỻ.  
 he wroghte þͭ / be no wit / but þorghȝ woord oone.  
-Aft̉ þe kende þͭ he cō of / þer̉ cōsed he Dowel.  
+Aft͛ þe kende þͭ he cō of / þer̉ cōsed he Dowel.  
 ⁊ whan he was waxe moor̉ / in his moodir p̉sense.  
 he made lame to leepe / ⁊ he ȝaf lyȝht to blynde.  
 ⁊ he fedɖ wͭ tweȳ fyschis / ⁊ wͭ fyVe loVes.  
