--- a/transcriptions/for_testing/harley_7334/004v.md
+++ b/transcriptions/for_testing/harley_7334/004v.md
@@ -29,7 +29,7 @@ Clerk þer was of Oxenford also
 That vnto logik hadde longe I go  
 Also lene was his hors as is a rake  
 And he was not right fat I vndertake  
-But lokede holwe and þ̔to soburly  
+But lokede holwe and þ̉to soburly  
 fful thredbare was his ouerest courtepy  
 ffor he hadde nouȝt geten him ȝit a benefice  
 Ne was not worþy to hauen an office  
