--- a/transcriptions/for_testing/harley_7334/054v.md
+++ b/transcriptions/for_testing/harley_7334/054v.md
@@ -22,7 +22,7 @@ Sche seyde allas ȝour hors goþ to þe fen
 wiþ wylde mares as fast as he may go  
 vnþank come on his heed þat band him so  
 And he þat bettir schuld han knyt þe Reyne  
-Allas qd Iohñ aleyn|for cristes peyne  
+Allas qd Iohn̈ aleyn|for cristes peyne  
 leg doun þi swerd and I sal myn alswa  
 I is ful wight god wat as is a Ra  
 By goddes hart he sal nat scape vs bathe  
