--- a/transcriptions/for_testing/harley_7334/058v.md
+++ b/transcriptions/for_testing/harley_7334/058v.md
@@ -18,7 +18,7 @@ And þer þey setten steuene for to meete
 To pleyen atte dys in such a strete  
 ffor in þe toun ne was þer no prentys  
 That fairer cowde caste a peyre dys  
-Than Ꝑkyn couþe and þ̔to he was free  
+Than Ꝑkyn couþe and þ̉to he was free  
 Of his dispence in place of pryuyte  
 That fand his mayster wel in his chaffare  
 ffor often tyme he fond his box ful bare  
@@ -39,7 +39,7 @@ vpon a day whan he his papyr sought
 Of a prouerbe þat siþ þis same word  
 wel bette is roten appul out of hord  
 Than it rote al þe remenaunt  
-So fareþ it by a ryotous ẜuaunt  
+So fareþ it by a ryotous s̉uaunt  
 hit is ful lasse harm to late him pace  
 Than he schend al þe seruauntes in þe place  
 Therfore his mayster ȝaf him acqueyntaūce  
