--- a/transcriptions/for_testing/harley_7334/072r.md
+++ b/transcriptions/for_testing/harley_7334/072r.md
@@ -28,7 +28,7 @@ But naþeles I recche nat a bene
 They I come after him with hawe bake  
 I speke in prose and let him rymes make  
 And wiþ þat word he wiþ a sobre cheere  
-Bygan his tale as ȝe schal aft̔ heere ¶Expliciᵗ ꝓlogꝯ incipit fabula  
+Bygan his tale as ȝe schal aft̉ heere ¶Expliciᵗ ꝓlogꝯ incipit fabula  
 hateful harm condicion̄ of pouert  
 wiþ þurst wiþ cold wiþ honger so confoundyd  
 To asken help it schameþ in þin hert  
