--- a/transcriptions/for_testing/harley_7334/086r.md
+++ b/transcriptions/for_testing/harley_7334/086r.md
@@ -22,14 +22,14 @@ Doun on hir knees falleþ sche to grounde
 wepyng for tendirnes in herte blithe  
 Sche heried god an hundred þousand sithe  
 In vertu and in holy almesdede  
-They lyuen all.and neu̔ a sondre wende  
+They lyuen all.and neủ a sondre wende  
 Til deþ departe hem þis lyf þey lede  
 And far now wel my tale is at an ende  
 Now ihū crist þat of his might may sende  
 Ioy after wo gouerne vs in his grace  
 And keep ous alle þat ben in þis place  
 Our Ost vppon his styrops stood anoon  
-And seyde good mē herkneth euy̔choon
+And seyde good mē herkneth euỷchoon
 This was a þrifty tale for þe noones  
 Sir parissh prest qd he for goddes boones  
 Tel out a tale as was þy forward ȝore  
