--- a/transcriptions/for_testing/harley_7334/180r.md
+++ b/transcriptions/for_testing/harley_7334/180r.md
@@ -26,7 +26,7 @@ God it forbede quoþ þe prest what seye
 which þat I haue and elles wax I wood  
 Than þat ȝe schulde falle in such meschief  
 ffour ȝour good wil sir haue ȝe right good preef  
-Quoþ þe chanoun and far wel gũnt mercy  
+Quoþ þe chanoun and far wel günt mercy  
 he went his way and neuer þe prest him sey  
 After þis day and whan þat þis prest scholde  
 Maken assay at such tyme as he wolde  
