--- a/transcriptions/for_testing/r_3_2/139v.md
+++ b/transcriptions/for_testing/r_3_2/139v.md
@@ -11,11 +11,11 @@ Column 1:
 And putte awey his heuy chiere  
 But of hem tuo a man may here  
 What is to be so sibbe of blood  
-Non wiste of oþ̔ how it stood  
+Non wiste of oþ̉ how it stood  
 And yit þe fader at þe laste  
 his herte vpon þis mayde kaste  
 That he hir loueþ kindely  
-And yit he wiste neu̔e why  
+And yit he wiste neủe why  
 But al was knowe er þat þey wente  
 ffor god which wot here hol entente  
 here hertes boþe anon descloseþ  
@@ -34,19 +34,19 @@ he was a king men tolden me
 My modir dreint was in þe see  
 ffro poynt to poynt al sche him tolde  
 þat sche haþ longe in herte holde  
-And neu̔e dorste make hire mone  
+And neủe dorste make hire mone  
 But only to þis lord allone  
 To whom hire herte can nought hele  
 Torne it to wo turne it to wele  
 Torne it to good torne it to harm  
 and he þo tok hire in his arm  
 But such a ioye as he þo made.    
-was neu̔e seen. þus be þey glade  
+was neủe seen. þus be þey glade  
 That sory hadde be tofore  
 ffro þis day forþ fortune haþ swore  
 To sette him vpward on þe whel  
 So goþ þe world now wo now wel  
-This king haþ founde newe g̃ce  
+This king haþ founde newe g̈ce  
 So þat out of his derke place  
 he goþ him vp in to þe light  
 and wiþ him cam þat swete wight  
@@ -66,7 +66,7 @@ his castel boþe and his Citee
 And þus þei gon forth all in feere  
 The king þis lord þis maiden dere  
 This lord þo made hem riche feste  
-with eu̔y þing which was honeste  
+with eủy þing which was honeste  
 To plese wiþ þis worþy king  
 Ther lackeþ him no maner þing  
 But yit for al his noble array  
@@ -75,9 +75,9 @@ As he þat yit was of yong age
 So fell þer in to his corrage  
 The lusty woo þe glade peyne.  
 Of loue. which no man restreyne.  
-yit neu̔e mighte. as now tofore  
+yit neủe mighte. as now tofore  
 þis lord þenkþ al his world forlore  
-But if þe king wolde don him g̃ce  
+But if þe king wolde don him g̈ce  
 he wanteþ time he wanteþ place  
 him þoughte his herte wol tobreke  
 Til he may to þis maide speke  
@@ -102,4 +102,4 @@ But he þat wot what schal betide
 þe hihe god which wolde him kepe  
 whan þat þis king was fast aslepe  
 Be nightes tyme he haþ him bede  
-To seile in to anoþ̔ stede  
+To seile in to anoþ̉ stede  
