--- a/transcriptions/for_testing/r_3_2/140r.md
+++ b/transcriptions/for_testing/r_3_2/140r.md
@@ -22,7 +22,7 @@ what þing it signifie may
 And naþeles whan it was day  
 he bad caste anker and abod  
 and whil þat he on anker rod  
-The wynd which was tofore stñge  
+The wynd which was tofore stn̈ge  
 vppon þe poynt began to change  
 And torneþ þider as it scholde  
 þo knew he wel þͭ god it wolde  
@@ -65,7 +65,7 @@ Of hem þat stooden al aboute
 he tolde hem and declareþ oute  
 his happ such as him is bifall  
 Ther was no þing foryete of all  
-his wijf as it was goddes g̃ce  
+his wijf as it was goddes g̈ce  
 which was ꝓfessed in þe place  
 As sche þat was Abbesse þere  
 vnto his tale haþ leid hir eere  
@@ -101,5 +101,5 @@ wol leue. and go wher as þey be
 ffor neủe man of his degre  
 haþ don to hem so mochel good  
 and he his ꝓfit vndirstood  
-and gũnteþ with hem for to wende  
+and günteþ with hem for to wende  
 And þus þey made þer an ende  
