--- a/transcriptions/for_testing/r_3_2/140v.md
+++ b/transcriptions/for_testing/r_3_2/140v.md
@@ -15,7 +15,7 @@ This king which now haþ his desir
 Seiþ he wol holde his cours to Tyr  
 They hadde wynd at wille þo   
 with topseile cole and forþ þey go  
-And striken neu̔e til þey come  
+And striken neủe til þey come  
 To Tire. wher as þey haue nome  
 And londen hem with mochil blisse  
 Tho was þer many a mouþ to kisse   
@@ -25,7 +25,7 @@ And Thaise hir doughter be hir side
 þe ioye which was þilke tide  
 Ther may no mannes tonge telle  
 þey seiden alle hier comþ þe welle  
-Of alle wōmannissche g̃ce  
+Of alle wōmannissche g̈ce  
 The king haþ take his real place   
 The queen is in to chambre go  
 Ther was gret feste arraied þo  
@@ -35,7 +35,7 @@ and gladen hem wiþ ioyes newe
 The descoloured pale hewe  
 Is now bicome a rody cheke  
 Ther was no merþe for to seke  
-But eu̔y man haþ what he wolde  
+But eủy man haþ what he wolde  
 The king as he wel couþe he scholde  
 Makþ to his poeple right good chier̉  
 And aftir sone as þou schalt hiere  
@@ -44,7 +44,7 @@ wher he his doughter haþ coroned
 fforþ with þe lord of Mitelene  
 þat on is king þat oþer queene  
 and þus þe fadres ordinance  
-þis lend haþ set in gou̔nance  
+þis lend haþ set in goủnance  
 and seide þat he wolde wende  
 To Tharse for to make an ende  
 Of þat his doughter was betraied  
@@ -62,9 +62,9 @@ The seil on heigh þe stiere on honde
 And seilen til þey come alonde  
 At Thaise neih to þe Cite  
 And whan þey wisten it was he  
-The toun haþ don him reu̔ence  
+The toun haþ don him reủence  
 he telleþ hem þe violence  
-which þe traitour Stñgulio  
+which þe traitour Stn̈gulio  
 And Dionise him hadde do  
 Touching his doughter as þe herde  
 And whan þey wiste how it ferde  
@@ -81,7 +81,7 @@ That al þe world it mighte knowe
 And vpon þis condicion̄  
 The dom in execucion̄  
 was putt anon wiþoute faile  
-and eu̔y man haþ gret m̉uaile  
+and eủy man haþ gret m̉uaile  
 which herde tellen of þis chaunce  
 And þenkeþ goddes purueiance  
 which doþ mercy forth wiþ iustice  
@@ -121,7 +121,7 @@ This king which now haþ his desir
 Seiþ he wol holde his cours to Tyr  
 They hadde wynd at wille þo   
 with topseile cole and forþ þey go  
-And striken neu̔e til þey come  
+And striken neủe til þey come  
 To Tire. wher as þey haue nome  
 And londen hem with mochil blisse  
 Tho was þer many a mouþ to kisse   
@@ -131,7 +131,7 @@ And Thaise hir doughter be hir side
 þe ioye which was þilke tide  
 Ther may no mannes tonge telle  
 þey seiden alle hier comþ þe welle  
-Of alle wōmannissche g̃ce  
+Of alle wōmannissche g̈ce  
 The king haþ take his real place   
 The queen is in to chambre go  
 Ther was gret feste arraied þo  
@@ -141,7 +141,7 @@ and gladen hem wiþ ioyes newe
 The descoloured pale hewe  
 Is now bicome a rody cheke  
 Ther was no merþe for to seke  
-But eu̔y man haþ what he wolde  
+But eủy man haþ what he wolde  
 The king as he wel couþe he scholde  
 Makþ to his poeple right good chier̉  
 And aftir sone as þou schalt hiere  
@@ -150,7 +150,7 @@ wher he his doughter haþ coroned
 fforþ with þe lord of Mitelene  
 þat on is king þat oþer queene  
 and þus þe fadres ordinance  
-þis lend haþ set in gou̔nance  
+þis lend haþ set in goủnance  
 and seide þat he wolde wende  
 To Tharse for to make an ende  
 Of þat his doughter was betraied  
@@ -168,9 +168,9 @@ The seil on heigh þe stiere on honde
 And seilen til þey come alonde  
 At Thaise neih to þe Cite  
 And whan þey wisten it was he  
-The toun haþ don him reu̔ence  
+The toun haþ don him reủence  
 he telleþ hem þe violence  
-which þe traitour Stñgulio  
+which þe traitour Stn̈gulio  
 And Dionise him hadde do  
 Touching his doughter as þe herde  
 And whan þey wiste how it ferde  
@@ -187,7 +187,7 @@ That al þe world it mighte knowe
 And vpon þis condicion̄  
 The dom in execucion̄  
 was putt anon wiþoute faile  
-and eu̔y man haþ gret m̔uaile  
+and eủy man haþ gret m̉uaile  
 which herde tellen of þis chaunce  
 And þenkeþ goddes purueiance  
 which doþ mercy forth wiþ iustice  
