--- a/transcriptions/for_testing/r_3_2/141r.md
+++ b/transcriptions/for_testing/r_3_2/141r.md
@@ -34,7 +34,7 @@ And in ensample his lijf was write
 þat alle louers mighten wite  
 how atte laste it schal be sene  
 Of loue what þey wolden meene  
-ffor se now on þat oþ̔ side  
+ffor se now on þat oþ̉ side  
 Antiochus wiþ al his pride  
 which sette his loue vnkyndely  
 his ende hade sodeinly.  
@@ -42,7 +42,7 @@ Sett ayein kinde vppon vengance
 And for his lust haþ his penance  
 Lo þus my sone might þou liere  
 what is to loue in good maner̉  
-and what to loue in oþ̔wise  
+and what to loue in oþ̉wise  
 The meede arist of þe seruise  
 ffortune þough sche be not stable  
 yit at som time is fauorable  
@@ -69,10 +69,10 @@ as þing which worþi is to hiere
 Of gret ensample and gret matier̉  
 wher of my fader god yow quite  
 But in þis point my self aquite  
-I may right wel þat neu̔e yit  
+I may right wel þat neủe yit  
 I was assoted in my witt  
 But only in þat worþi place  
-wher alle lust and alle g̃ce  
+wher alle lust and alle g̈ce  
 Is sett. if þat daunger ne were  
 But þat is al my moste fere  
 I not what ye fortune accompte  
@@ -81,7 +81,7 @@ I wot wel for I haue assaied
 ffor whan mȳ herte is best araied    
 And I haue al my witt þorgh sought  
 Of loue to beseche hire ought  
-ffor al þat eu̔e I sike may  
+ffor al þat eủe I sike may  
 I am concluded wiþ a nay  
 þat oo sillable haþ ouer þrowe  
 A þousand wordes on a rowe  
@@ -89,7 +89,7 @@ Of suche as I best speke can
 Thus am I but a lewed man  
 But fader for ye ben a clerk  
 Of loue. and þis matier is derk  
-And I can eu̔e leng þe lasse  
+And I can eủe leng þe lasse  
 But yit I may not lete it passe  
 youre hole counseil I beseche  
 þat ye me be som weye teche  
