--- a/transcriptions/for_testing/r_3_2/141v.md
+++ b/transcriptions/for_testing/r_3_2/141v.md
@@ -34,7 +34,7 @@ myn ordre and myn astat to saue
 I seid I wolde of myn office  
 To v̉tu more þan to vice  
 Encline. and teche þe my lore  
-ffor þy to speken ou̔more  
+ffor þy to speken oủmore  
 Of loue which þe may auaile  
 Tak loue wher it may auaile  
 ffor as of þis which þou art Inne  
@@ -46,14 +46,14 @@ Thus folweþ it if þou trauaile
 wher þou no ꝓfit hast ne pris  
 Thou art toward þiself vnwis  
 and siþþe þou mightest lust atteyne  
-Of eu̔y lust þe ende is peyne  
-And eu̔y peyne is good to flee  
+Of eủy lust þe ende is peyne  
+And eủy peyne is good to flee  
 So is it wonder þing to see  
 why such a þing schal be desired  
 þe more þat a stok is fired  
 þe raþere in to aisshe it torneþ  
 The foot which in þe were sporneþ  
-ffulofte his hed haþ ou̔throwe  
+ffulofte his hed haþ oủthrowe  
 þis loue is blind and can nought knowe   
 wher þat he goþ til he be falle  
 ffor þi but if it so bifalle  
@@ -61,7 +61,7 @@ wiþ good counseil þat he be lad
 him oughte for to ben adrad  
 ffor counseil passeþ all þing  
 To him which þenkþ to ben a king  
-and eu̔y man for his partie  
+and eủy man for his partie  
 A kingdom haþ to iustifie  
 þat is to seie his oughne doom  
 If he misrewele þat kingdoom  
@@ -84,7 +84,7 @@ As I seide er þat þou arise
 Er þat þou falle in such a wise  
 þat þou ne might þiself recouer̉  
 ffor loue which þat blind was euer̉  
-Makþ all his ẜuantz blinde also  
+Makþ all his s̉uantz blinde also  
 My sone and if þou haue ben so  
 yit is it tyme to wiþdrawe  
 and sett þin herte vnder þat lawe.  
@@ -92,7 +92,7 @@ The which of reson̄ is gouerned.
 and nought of will and to be lerned    
 Ensamples þou hast many on  
 Of now and ek of tyme agon  
-That eu̔y lust is but a while  
+That eủy lust is but a while  
 and who þat wole himself beguyle  
 he may þe raþer be deceyued  
 My sone now þou hast conceyued  
