--- a/transcriptions/for_testing/r_3_2/142v.md
+++ b/transcriptions/for_testing/r_3_2/142v.md
@@ -8,32 +8,32 @@ author: Jenna Schoen
 
 Column 1:
 
-To do me g̃ce of þilke sweete tonne  
+To do me g̈ce of þilke sweete tonne  
 which vnder keie in his celer amidde  
 lith couched. þat fortune is ouerronne  
 But of þe bitter cuppe I haue begonne  
 I not how ofte. and þus I finde no game  
-ffor eu̔e I axe. and eu̔e it is the same  
-I se the world stonde eu̔e vppon eschange  
+ffor eủe I axe. and eủe it is the same  
+I se the world stonde eủe vppon eschange  
 now wyndes lowde ⁊ now þe weder softe  
 I may sen ek þe grete moone chānge  
 and þing which now is lowe is eft alofte  
 þe dredful werres in to pees fulofte.    
-þey torne and eu̔ is danger in o place   
-which wol not chānge his wil to do me g̃ce  
+þey torne and eủ is danger in o place   
+which wol not chānge his wil to do me g̈ce  
 But vppon þis þe grete clerk OVide  
-Of loue whan he makþ his remembñce  
-he seith þ̔ is þe blinde god Cupide  
-þe which. haþ loue vnd̉ his gou̔nance  
+Of loue whan he makþ his remembn̈ce  
+he seith þ̉ is þe blinde god Cupide  
+þe which. haþ loue vnd̉ his goủnance  
 And in his hond wiþ many a firy lance  
 he woundeþ ofte wher he wol nought hele.  
 And þͭ somdel is cause of my querele  
 OVide ek seiþ þͭ loue to parforne  
 Stant in þe hond of Ven9 þe goddesse  
 but whan sche takþ hir cōnseil wͭ satorne  
-þer is no g̃ce. and in þat time I gesse  
+þer is no g̈ce. and in þat time I gesse  
 Began my loue. of which mȳ heuynesse.  
-Is now and eu̔e schal but if I speede  
+Is now and eủe schal but if I speede  
 So wot I nought myself what is to rede  
 For þi to yow Cupide and Ven9 boþe  
 wͭ al mȳ hertes obeissance I p̉ie    
@@ -47,11 +47,11 @@ O þou Cupide god of loues lawe
 mȳ herte. do þͭ won̄de be wiþdrawe  
 Or yiue me salue such as I desir̉  
 ffor seruice in þy court wiþoutē hire  
-To me which eu̔e yit haue kept þin heste  
-may neu̔e be to loues lawe honeste  
+To me which eủe yit haue kept þin heste  
+may neủe be to loues lawe honeste  
 O þou gentil ven9 loues queene  
 wiþoutē gilt þou dost on me þi wreche  
-þou wost my peyne is eu̔e a liche grene.  
+þou wost my peyne is eủe a liche grene.  
 ffor loue. yit I may it nought areche  
 þis wolde I for my laste word beseche  
 
@@ -75,31 +75,31 @@ whan I behield and sodeinly
 I sigh wher Venus stood me by   
 So as I mighte vndir a tree  
 To grounde I fell vpon my kne  
-And preide hir for to do me g̃ce  
+And preide hir for to do me g̈ce  
 Sche caste hire chier vppon my face  
 And as it were haluyng againe  
 Sche axeþ me what was my name  
-Ma dame I seide Iohñ Gower  
-Now Iohñ quoþ sche in my power  
+Ma dame I seide Iohn̈ Gower  
+Now Iohn̈ quoþ sche in my power  
 þou most as of þi loue stonde  
 ffor I þy bille haue vnderstonde  
 In which to Cupide and to me  
 Somdel þou hast compleyned þe  
 And somdel to natur̉ also  
 But þat schal stonde among yow tuo  
-ffor þ̔ of haue I nought to done  
+ffor þ̉ of haue I nought to done  
 ffor nature is vnder þe moone  
-maystresse for eu̔e lyues kynde  
+maystresse for eủe lyues kynde  
 But it so be þat sche may fynde  
 Som holy man þat wole wiþdrawe  
 his kindely lust ayein hire lawe   
 but seelde whanne it falleþ so  
-ffor fewe men þ̔ ben of þo  
+ffor fewe men þ̉ ben of þo  
 But of þese oþere yknowe be  
 which of here oughne nycete  
 Ayein nature and hire office  
 Deliten hem in sondry vice  
 wherof þat sche fulofte haþ pleigned  
 And ek my count it haþ desdeigned  
-And eu̔e schal. for it receyueth  
+And eủe schal. for it receyueth  
 Non such þat kinde so desteyneþ  
