--- a/transcriptions/for_testing/r_3_2/143r.md
+++ b/transcriptions/for_testing/r_3_2/143r.md
@@ -27,7 +27,7 @@ Of þilke vnsely iolif wo
 wher of þou seist þin herte is fired  
 But as of þat þou hast desired  
 Aftir þe sentence of þy bille  
-þou most þ̔of don at my wille  
+þou most þ̉of don at my wille  
 And I þerof me wole auyse  
 ffor be þou hool it schal suffise  
 nought al as þou desire woldest  
@@ -63,7 +63,7 @@ And well I wot þough þou beseche
 My loue. lustes be þer none   
 which I may take in þy ꝑsone  
 My loue lust. and lokkes hore  
-In chambre acorden neu̔e more  
+In chambre acorden neủe more  
 and þough þou feigne a yong corrage  
 It scheweþ wel be þe visage  
 þat olde Grisell is no fole  
