--- a/transcriptions/for_training/cc_16r-35v/16r.md
+++ b/transcriptions/for_training/cc_16r-35v/16r.md
@@ -33,7 +33,7 @@ I not wher sche be wōman or goddesse
 But Venus is it sothly as I gesse  
 And þer with al on knees a doun he fille    
 And seyde Venus if it be þy wille  
-yow in þis gardeyn þus to tñsfigure  
+yow in þis gardeyn þus to tn̈sfigure  
 Byfore me sorwful wrecched creature  
 Out of þis prison̄ help þat we mowe scape  
 And if so be my destenye be schape  
