--- a/transcriptions/for_training/cc_16r-35v/16v.md
+++ b/transcriptions/for_training/cc_16r-35v/16v.md
@@ -17,7 +17,7 @@ That I may seen hir atte leste wey
 I nam but ded þer nys no more to sey  
 This Palamon whan he þis wordes herde  
 Dispitously he loked and answerde  
-wheþ̔ seistow þis in ernest or in pleye  
+wheþ̉ seistow þis in ernest or in pleye  
 Nay qd Arcite in ernest by my feye  
 God helpe me so me lust ful yuel playe  
 This Palamon gan knet his browes twaye  
