--- a/transcriptions/for_training/cc_16r-35v/19r.md
+++ b/transcriptions/for_training/cc_16r-35v/19r.md
@@ -18,7 +18,7 @@ The boxtre or þe asshen deed and colde
 Than seide he o cruel goddes þat gouerne  
 This world with bynding of your word eterne  
 And writen in þe table of athamaunt  
-youre ꝑlement and ȝour eterne gũnt  
+youre ꝑlement and ȝour eterne günt  
 what is mankynde more vnto ȝou holde  
 Than is þe scheep þat roukeþ in þe folde  
 ffor slain is man right as anoþer beeste  
@@ -28,7 +28,7 @@ And ofte tymes gilteles ꝑ de
 ¶ what gouernance is in þis prescience  
 That gilteles tormenteþ Innocence  
 And encreseth þis is al my penaūce  
-That man is bounden to his obẜuaūce  
+That man is bounden to his obs̉uaūce  
 ffor goddes sake to letten of his wille  
 Ther as a beeste may aỻ his lust fulfiỻ  
 And whan a beeste is ded he haþ no peyne  
@@ -37,7 +37,7 @@ Though in þis world he haue care and wo
 wiþouten doute it may stonden so  
 The answere of þis lete I to diuines  
 But wel I wot þat in þis world gret pyne is  
-Allas I see a ẜpent or a þeef  
+Allas I see a s̉pent or a þeef  
 That many a trewe man haþ do meschief  
 Gon at his large and wher him list may turne  
 But I moot ben in p͛son̄ þurgh Saturne  
