--- a/transcriptions/for_training/cc_16r-35v/21v.md
+++ b/transcriptions/for_training/cc_16r-35v/21v.md
@@ -33,7 +33,7 @@ The seluir dropes hangyng in þe leeues
 And Arcita in þe court roial  
 wiþ Theseus his squier principal  
 Is rysen and lokeþ on þe mery day  
-And for to doon his obẜuance to may  
+And for to doon his obs̉uance to may  
 Remembryng on þe poynt of his desir  
 he on his courser stertyng as þe fir  
 Is riden in to þe feeldes him to pleye  
