--- a/transcriptions/for_training/cc_16r-35v/24r.md
+++ b/transcriptions/for_training/cc_16r-35v/24r.md
@@ -16,7 +16,7 @@ That frothen whit as foom for ne wood
 vp to þe ancle foughte þey in here blood  
 And in þis wise I lete hem fightyng dwelle  
 And forþ I wole of Theseus you telle  
-The destenye Ministre gen̔al  
+The destenye Ministre gen̉al  
 That executeþ in þe world ouer al  
 The purueance þat god haþ seie bifore  
 So strong it is þat þei þe world hadde it swore  
