--- a/transcriptions/for_training/cc_16r-35v/25v.md
+++ b/transcriptions/for_training/cc_16r-35v/25v.md
@@ -11,7 +11,7 @@ he haþ considered schortly in a clause
 The trespas of hem bothe and eek þe cause  
 And al þough þat his Ire hire gilt accused  
 ȝit in his reson̄ he hem boþe excused  
-As þus he þoughte wel þat eu̔y man  
+As þus he þoughte wel þat eủy man  
 wil helpe himself in loue if þat he can  
 And eek deliuere himself out of p͛son̄  
 And eek his herte hadde compassion̄  
