--- a/transcriptions/for_training/cc_16r-35v/26r.md
+++ b/transcriptions/for_training/cc_16r-35v/26r.md
@@ -34,10 +34,10 @@ And ȝe schal boþe anon vnto me swere
 That neuere ȝe schal my coroune dere  
 Ne make werre vpon me night ne day  
 But ben my frendes in aỻ þat ȝe may  
-I ȝou forȝiue þis trespas eu̔y del  
+I ȝou forȝiue þis trespas eủy del  
 And þey him sworen his axing fair and wel  
 And him of lordschipe and of mercy preide  
-And he hem g̃unteþ grace and þus he seide  
+And he hem g̈unteþ grace and þus he seide  
 To speke of riaỻ lynage and richesse  
 þough þat sche were a queen or a princesse  
 Ech of ȝou boþe is worþy douteles  
