--- a/transcriptions/for_training/cc_16r-35v/26v.md
+++ b/transcriptions/for_training/cc_16r-35v/26v.md
@@ -8,7 +8,7 @@ author: Jenna Schoen
 
 ffor whom ȝe haue þis strif and Ialousie  
 ȝe wite ȝoure self sche may not wedde tuo  
-At oones þough ȝe fighten eu̔emo  
+At oones þough ȝe fighten eủemo  
 That oon of ȝou al be him loþ or leef  
 he moot go pypen in an yuy leef  
 This is to sey sche may not haue boþe  
@@ -20,7 +20,7 @@ Lo heer ȝour ende of þat I schal deuyse
 ¶ My wil is þis for plat conclusion̄  
 wiþouten eny replicacion̄  
 If þat ȝow likeþ takeþ it for þe beste  
-That eu̔ych of ȝou schal gon wher him leste  
+That eủych of ȝou schal gon wher him leste  
 ffrely wiþouten Raunceon or daunger  
 And þis day fifty wykes fer ne neer  
 Euerich of ȝou schal bringe an hundred knightes  
