--- a/transcriptions/for_training/cc_16r-35v/28r.md
+++ b/transcriptions/for_training/cc_16r-35v/28r.md
@@ -39,7 +39,7 @@ Al peynted was þe wal in lengþe and brede
 lik to þe eestres of þe grisly place  
 That highte þe grete temple of Mars in trace  
 In þilke colde frosty regioun  
-Ther as Mars haþ his sou̔aigne mansion̄  
+Ther as Mars haþ his soủaigne mansion̄  
 ffirst on þe wal was peynted a foreste  
 In which þer dwelled neyþer man ne beste  
 wiþ knotty knarry bareyne trees olde  
