--- a/transcriptions/for_training/cc_16r-35v/30r.md
+++ b/transcriptions/for_training/cc_16r-35v/30r.md
@@ -20,7 +20,7 @@ The day approcheþ and hir retornynge
 That eueriche scholde an hundred knightes bringe  
 The bataille to darrayne as I ȝou tolde  
 And til athenes hire couenant for to holde  
-haþ eu̔ych of hem brought an .C. knightes  
+haþ eủych of hem brought an .C. knightes  
 wel armed for þe werre at aỻ rightes  
 And sikerly þer trowed many a man  
 That neuer siþþen þat þe world bigan  
