--- a/transcriptions/for_training/cc_16r-35v/31v.md
+++ b/transcriptions/for_training/cc_16r-35v/31v.md
@@ -9,7 +9,7 @@ author: Jenna Schoen
 To eesen hem and don hem aỻ honour  
 That yet men weneþ þat no mannes wit  
 Of non estat ne couþe amenden it  
-The menstralcye þe ẜiuse atte feste  
+The menstralcye þe s̉iuse atte feste  
 The grete ȝiftes to þe meste and leste  
 The riche array of Theseus Paleys  
 Ne who sat ferst ne last vpon þe deys  
