--- a/transcriptions/for_training/cc_16r-35v/32r.md
+++ b/transcriptions/for_training/cc_16r-35v/32r.md
@@ -12,7 +12,7 @@ But mercy lady bright þat knowest wele
 My þought and seest what harmes þat I feele  
 Considere al þis and rewe vpon my soore  
 As wisly as I schal for euermore  
-Emforth my might þi trewe ẜuan̄t be  
+Emforth my might þi trewe s̉uan̄t be  
 And holden werre alwey wiþ chastite  
 That I make myn aVow so ȝe me helpe  
 I keepe nought of armes for to yelpe  
@@ -20,7 +20,7 @@ Ne I ne axe nought to morwe to haue victorie
 Ne renon̄ in þis caas ne veine glorie  
 Of pris of armes blowen vp and doun  
 But I wolde haue fully possessioun  
-Of emelye and dye in þi ẜuise  
+Of emelye and dye in þi s̉uise  
 ffynde yow þe maner how and in what wise  
 I recche nat but it may bettre be  
 To haue victorie of hem or þei of me  
@@ -41,5 +41,5 @@ yif me my loue þou blisful lady deere
 whan þe orison̄ was don of Palamon  
 his sacrifise he dide and þat anon  
 fful pitously wiþ aỻ circumstances  
-All telle I not as now his obẜuances  
+All telle I not as now his obs̉uances  
 But atte laste þe Statue of Venus schook  
