--- a/transcriptions/for_training/cc_16r-35v/32v.md
+++ b/transcriptions/for_training/cc_16r-35v/32v.md
@@ -9,7 +9,7 @@ author: Jenna Schoen
 And made a signe wherby þat he took  
 That his prayer accepted was þat day  
 ffor þough þe signe schewed a delay  
-ȝit wist he weel þat gũnted was his boone  
+ȝit wist he weel þat günted was his boone  
 And with glad herte he went him home ful soone  
 The þridde hour inequal þat Palamon  
 Bigan to venus temple for to gon  
@@ -25,7 +25,7 @@ Smokyng þe temple ful of cloþes fair̉
 This Emelye with herte debonaire  
 hire body with þe water of a welle  
 But how sche dide hire rite I dar not telle  
-But it be eny þing in gen̔al  
+But it be eny þing in gen̉al  
 And ȝit it were a game to here it al  
 To him that meneþ wel it nere no charge  
 But it is good a man be at his large  
