--- a/transcriptions/for_training/cc_16r-35v/33r.md
+++ b/transcriptions/for_training/cc_16r-35v/33r.md
@@ -27,7 +27,7 @@ And fro me torne awey here hertes so
 That aỻ here hoote loue and here desire  
 And aỻ here besy torment and here fire  
 Be queynt or torned in anoþer place  
-And if so be þou wolt not do me g̃ce  
+And if so be þou wolt not do me g̈ce  
 Or if my destyne be schape so  
 That I schal needes haue oon of hem tuo  
 As sende me him that most desireth me  
