--- a/transcriptions/for_training/cc_16r-35v/34v.md
+++ b/transcriptions/for_training/cc_16r-35v/34v.md
@@ -8,13 +8,13 @@ author: Jenna Schoen
 
 And in þi temple I wil my baner honge  
 And aỻ þe armes of my companye  
-And eu̔emo vnto til þat day I dye  
+And eủemo vnto til þat day I dye  
 Eterne fire I wol byfore þe fynde  
 And eek to þis avow I wil me bynde  
 My berd myn here þat hongeþ longe a doun  
 That neuer ȝet ne felte offension̄  
 Of rasour nor of schere I wil þe yiue  
-And ben þi trewe ẜuant whil I liue  
+And ben þi trewe s̉uant whil I liue  
 Now lord haue rouþe vpon my sorwes sore  
 If me þe victorie I axe þe namore  
 ¶ The preyer stynte of Arcita þe stronge  
