--- a/transcriptions/for_testing/cc_198/164r.md
+++ b/transcriptions/for_testing/cc_198/164r.md
@@ -21,7 +21,7 @@ None faster cours þan ȝe þis ȝeres tuo
 Then schal sche be euer at þe fulle alway  
 And springe flood lasten boþe night and day  
 And but sche fouche sauf in such manere  
-To gũnte me my lady souerein dere  
+To günte me my lady souerein dere  
 Preye hire to synken euery rokke a doun  
 In to hire owne darke region̄  
 vnder þe grounde þer Pluto duelleþ Inne  
@@ -38,7 +38,7 @@ Lo y þis woful creature lete lye
 Chese he for me wheþer he wol lyue or dye  
 Arneragus wiþ hele and gret honour  
 As he was of Chyualry þe flour  
-Is comen home and oþ̔e worþy men  
+Is comen home and oþ̉e worþy men  
 O blisful art þou Dorigen  
 þat hast þin lusty housbonde in þin armes  
 þe freissche knight þe worþy man of armes  
