--- a/transcriptions/for_testing/cp_201/83v.md
+++ b/transcriptions/for_testing/cp_201/83v.md
@@ -6,22 +6,22 @@ author: Jenna Schoen
 
 þe wyche was dobet / where þͭ he wente.  
 ffor deve þorghȝ his doynge / ⁊ dūbe speke ⁊ herde.  
-⁊ aỻ he helede ⁊ halp / þͭ hȳ of g̃ce askede.  
+⁊ aỻ he helede ⁊ halp / þͭ hȳ of g̈ce askede.  
 ⁊ þo was he callid in cowrt / of þe comoū peple.  
 ffor þe dedys þͭ he dede / Ihū fyly dauyd.  
 ffor dauid was þe dowhtyeste / of dedis in his tyme.  
-þerfor̉ mē sūgen. Saul īt̉fecit mille ؛ ⁊ ddʾ decē milia˚.  
+þerfor̉ mē sūgen. Saul īt͛fecit mille ؛ ⁊ ddʾ decē milia˚.  
 ffor þy þe cūtre þer̉ Ihū cam / þey callid hȳ.  
 ⁊ named hȳ of nazarethȝ / ⁊ no mā so worthy.  
 To ben kayser or kyng / of þe kyngdom of Iuda.  
-Ne ou̔ Iewis Iustise / as Ihūs was hem thowte.  
-þerfor̉ hadde kayphas envyȝe / ⁊ oþ̔e konȳge Iewis.  
+Ne oủ Iewis Iustise / as Ihūs was hem thowte.  
+þerfor̉ hadde kayphas envyȝe / ⁊ oþ̉e konȳge Iewis.  
 ffor to doon hȳ to deþe / day ⁊ nyght þey kastyn.  
 ⁊ kulled hȳ on þe cros / on Caluerye on a fryday.  
-⁊ aft̉ beried þey his body / ⁊ beden þͭ mē sholde.  
+⁊ aft͛ beried þey his body / ⁊ beden þͭ mē sholde.  
 kepen it. fram nyght comeris / wͭ knyghtys y armed.  
 ffor no freend sholde it fecche / for ꝓphetis befor̉n tolde.  
-þͭ c̉stis blessid body / of berielis shulde Vp ryse.  
+þͭ c͛stis blessid body / of berielis shulde Vp ryse.  
 ⁊ goon in to Galile / ⁊ gladien hise apostlys.  
 ⁊ his modir Marie / þus mē by forehond demede.  
 ¶þan þe knyghtis þͭ keptȳ it / be knewen hē selue.  
@@ -34,6 +34,6 @@ Verry man by for̉ hem aỻ / ⁊ forþ be for̉ hē wente.
 ⁊ by wichyd hem þͭ þere wooke / ⁊ awey stole þe body.  
 But sone Marie Magdeleyn / mette hym in þe weye.  
 Goynge towarɖ Galyle / boþe in godhede ⁊ in māhede.  
-⁊ lyVynge ⁊ lookynge / ⁊ wͭ lowhde Voyȝs he c̉ȝede.  
-In eu̔y cūpanye þ̔e he cam / Xpt̄ resurgens.  
-þus cam it owt / þͭ c̉st  ou̔ cam / ⁊ recurede ⁊ leVede.  
+⁊ lyVynge ⁊ lookynge / ⁊ wͭ lowhde Voyȝs he c͛ȝede.  
+In eủy cūpanye þ̉e he cam / Xpt̄ resurgens.  
+þus cam it owt / þͭ c͛st  oủ cam / ⁊ recurede ⁊ leVede.  
