--- a/transcriptions/for_testing/cp_201/84r.md
+++ b/transcriptions/for_testing/cp_201/84r.md
@@ -17,26 +17,26 @@ he took Thomas by þe hond / ⁊ tawhte hȳ to grope.
 Dn̄ meus ⁊ deus meus . ⁊ doun he fel to g˚wnde.  
 þͧ art myn lord y be leVe / ⁊ greet loVe þͧ schewist.  
 þͧ dyedist ⁊ þoledyst deeþ / ⁊ deme þͧ shalt Vs aỻ.  
-⁊ now þͧ lyvist ⁊ lokist / ⁊ laste þͧ shalt eu̔e.  
+⁊ now þͧ lyvist ⁊ lokist / ⁊ laste þͧ shalt eủe.  
 ¶Cryst carpede þāne / ⁊ curteysly he seyde.  
 Thomas for þͧ trowist þis / ⁊ trewly it belevist.  
-Blessid mote þͧ be / ⁊ be shalt for eu̔e.  
+Blessid mote þͧ be / ⁊ be shalt for eủe.  
 ⁊ blessid mote þey been / in body ⁊ in sowle.  
-þͭ neu̔e shulle see me in syght / as þͧ doost nowþe.  
+þͭ neủe shulle see me in syght / as þͧ doost nowþe.  
 ⁊ leelly be leven al þis / y love hē ⁊ blesse hem  
 Beati qui non Viderunt ؛ ⁊ crediderūt.  
 ¶⁊ whan þis dede was doon / Dobest he took sone  
 ⁊ ȝaf Peers power / ⁊ ꝑdoū to graunte.  
-To aỻ man̔e of mē / mercy ⁊ for ȝevenesse.  
+To aỻ man̉e of mē / mercy ⁊ for ȝevenesse.  
 ⁊ power to a soyle hē / of aỻ maner̉ of synnes.  
 In cōnaūt þͭ þey come / ⁊ knowleche to payȝe  
 To peers plowhman pardoner ./ Redde qdʾ debes.  
 ¶þus peers plowhman / for his ꝑdoū p̈yede.  
 To byȝnden . ⁊ Vnbynde / boþe heer̉ ⁊ ellys.  
 ⁊ a soyle mē of her̉ sȳnys / saVe of dette oone.  
-¶þanne a nō aft̉ in hyȝ / Vp in to heVene.  
+¶þanne a nō aft͛ in hyȝ / Vp in to heVene.  
 he wente ⁊ wooneþ þer̉ / ⁊ wil come at þe laste.  
 ⁊ rewarde hȳ ryght wel / þͭ rat . redde qdʾ debes.  
 ⁊ peyȝeth ꝑfyȝtly / as pur̉ trewthe wolde.  
 ⁊ what ꝑsone peyȝeþ not / pers þȳkeþ hȳ to pūche.  
-⁊ demen hem at domes day / eyþ̔ to deþ / or lyVe.  
+⁊ demen hem at domes day / eyþ̉ to deþ / or lyVe.  
