--- a/transcriptions/for_testing/r_3_2/142r.md
+++ b/transcriptions/for_testing/r_3_2/142r.md
@@ -24,7 +24,7 @@ Be frendlich vnto my querele
 So þat mȳ herte were in hele   
 Of loue which is in my brest  
 I wot wel þanne a bettre p̉st    
-was neu̔e mad to my behoue  
+was neủe mad to my behoue  
 But al þe while þat I houe  
 In non̄certein bituen þe tuo  
 And not wher I to wel or wo  
@@ -39,14 +39,14 @@ And bringe ayein a good answere
 Tho was betwen my prest and me  
 Debat. and gret ꝑplexite  
 My resoun vndirstod him wel  
-and knew it was soþ eu̔y del  
+and knew it was soþ eủy del  
 That he haþ seid but nought for þy   
-My will haþ no þing sett þ̔by  
+My will haþ no þing sett þ̉by  
 ffor touching of so wis a port  
 Is vnto loue of no desport  
-yit mighte neu̔e man beholde  
+yit mighte neủe man beholde  
 Reson̄ wher loue was wiþholde  
-þey ben nought of o gou̔nance  
+þey ben nought of o goủnance  
 and þus we fellen in destance  
 My prest and I but I spak fair̉  
 and þorgh my wordes debonaire  
@@ -71,16 +71,16 @@ The woful peyne of loues maladie
 Ayein þe which may no phisiqꝫ auaile  
 Min herte haþ so bewhaped wiþ sotie  
 þat wher so þat I reste or trauaile  
-I fynde it eu̔e redy to assaile  
+I fynde it eủe redy to assaile  
 My reson̄ which þat can him nought defende  
 Thus seche I helpe wher of I mighte amende  
 First to nature if þat I me compleyne  
-Ther fynde I how þat eu̔y creature  
+Ther fynde I how þat eủy creature  
 Som tyme a yeer haþ loue in his demeyne  
 So þat þe litel wrenne in his mesur̉  
 haþ yit of kinde of loue vnder his cure  
 And I but o desir of which I misse  
-And þus but I haþ eu̔y kinde his blisse  
+And þus but I haþ eủy kinde his blisse  
 The reson̄ of my witt it ouerpasseþ  
 Of þat nature techeþ me þe weie.  
 To loue. and yit no certein sche cōpasseþ  
@@ -90,12 +90,12 @@ ffor þough treson̄ ayein my wil debate
 I may nought fle þat I ne loue algate  
 Uppon my self is þilke tale come  
 how whilom which is þe god of kynde  
-wiþ loue wrastled. and is ou̔come  
-ffor euer I wrastle and eu̔e I am behinde  
+wiþ loue wrastled. and is oủcome  
+ffor euer I wrastle and eủe I am behinde  
 þat I no strengþe in al mȳ herte I fynde  
 wher of þat I may stonden eny þrowe  
-So ferr my witt with loue is ou̔þrowe  
-Whom nedeþ helpe he mot his helpe cũe  
+So ferr my witt with loue is oủþrowe  
+Whom nedeþ helpe he mot his helpe cüe  
 Or helpeles he schal his neede spille  
 Pleinly þorghout my wittes all I haue  
 But non of hem can helpe aftir my wille  
