--- a/transcriptions/for_training/cc_16r-35v/28v.md
+++ b/transcriptions/for_training/cc_16r-35v/28v.md
@@ -18,10 +18,10 @@ That it made aỻ þe gates for to rese
 The northerne light in atte dores schone  
 ffor wyndowe on þe waỻ ne was þer none  
 Thorugh which men mighte eny light discerne  
-The dores waren aỻ of Atthemant et̔ne  
+The dores waren aỻ of Atthemant et̉ne  
 ychenchede ouertwart and endlong  
 wiþ Iren towgh and for to make it strong  
-Eu̔y piler þe temple to sustene  
+Eủy piler þe temple to sustene  
 was tonne gret of Iren bright and scheene  
 Ther say I ferst þe derk ymagynynge  
 Of felonye and al þe compassynge  
