--- a/transcriptions/for_training/cc_16r-35v/31r.md
+++ b/transcriptions/for_training/cc_16r-35v/31r.md
@@ -34,12 +34,12 @@ fful richely in all maner þinges
 ffor trusteþ wel þat Dukes Erles kynges  
 were gadred in þis noble companye  
 ffor loue and for encrees of chiualrie  
-aboute þis king þer ran on eu̔y part  
+aboute þis king þer ran on eủy part  
 fful many a tame leon̄ and lepart  
 And in þis wise þise lordes aỻ and some  
 Ben on þe soneday to þe Cite come  
 Aboute p͛me and in þe toun alighte  
 This Theseus þis Duk þis worþi knighte  
 whan he hadde brought hem in to his Cite  
-And Inned hem eu̔ich at his degre  
+And Inned hem eủich at his degre  
 he festeþ hem and doþ so gret labour  
